Add ability to get all docs
